Utworzono za pomocą Colab

--- a/01_preprocesoring.ipynb
+++ b/01_preprocesoring.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7EE9uFzMOgot8aC0Bx28p",
+      "authorship_tag": "ABX9TyPTnlxDwrirlBM3QdUNEasN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
         },
         "outputId": "5dc9b0be-fc6e-43a7-ee51-00a833a81646"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +88,7 @@
         "id": "8OnvJ3_wWtqD",
         "outputId": "2a6f7bec-f776-45bd-c2a2-b27537c27053"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,9 +115,44 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import sklearn\n",
+        "\n",
+        "sklearn.__version__"
+      ],
+      "metadata": {
+        "id": "04uAnE_tW8bS",
+        "outputId": "50592237-b46d-4dcb-add6-49dc640c3719",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1.6.1'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "04uAnE_tW8bS"
+        "id": "f9Lx6n3oX2C4"
       },
       "execution_count": null,
       "outputs": []
