Utworzono za pomocą Colab

--- a/supervised/01_basic/01_preprocesoring.ipynb
+++ b/supervised/01_basic/01_preprocesoring.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPH5lFtVumMpdYhdDo8ed+f",
+      "authorship_tag": "ABX9TyMgJv9qkn9req30XRvu1HDe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -76,7 +76,7 @@
           "height": 35
         }
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -126,7 +126,7 @@
         },
         "outputId": "7648d9ef-c4d6-4865-c13d-6e5ef674fa84"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -516,7 +516,7 @@
         "id": "W9bo7845cqsA",
         "outputId": "9f611843-ffc9-4752-a7e6-9110510afef1"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -566,7 +566,7 @@
         "id": "1sw9QNk1dmhR",
         "outputId": "fa5e3b67-b2ba-4a57-9001-fda497fa420c"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,7 +602,7 @@
         "id": "UbZj2apqeGZj",
         "outputId": "e73e38d8-dc6c-4dd6-eeae-86cb4deffe3d"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -893,8 +893,7 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "df.describe().T\n",
-        ""
+        "df.describe().T\n"
       ],
       "metadata": {
         "colab": {
@@ -904,7 +903,7 @@
         "id": "OH5IQ-G1eTTn",
         "outputId": "a40b8d12-7f1a-4570-d280-96b76e9a3575"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1204,7 +1203,7 @@
         "id": "j9v80HadHq0y",
         "outputId": "7d03dcb9-759b-4b12-f9df-1cb14aab936a"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1508,7 +1507,7 @@
         "id": "ph-7q_rheZDq",
         "outputId": "67c1d7a0-11f4-4d9e-bfc7-0d05cf272bfb"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1900,7 +1899,7 @@
         "id": "mGshsyKteucJ",
         "outputId": "1f756d4a-7731-4db4-c165-0dc602e42554"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1926,7 +1925,7 @@
         "id": "AWo3s48ZfHnq",
         "outputId": "28a320fd-6f15-4474-82e0-66722f2e8e8f"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1952,7 +1951,7 @@
         "id": "MngZ4I2efari",
         "outputId": "1854e0a1-6d21-43d3-ec79-ea4aaba4db74"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1980,7 +1979,7 @@
         "id": "ScG_P1IRfeDP",
         "outputId": "f4a17d38-6d06-4750-fde6-de81f8d392d0"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2361,7 +2360,7 @@
         "id": "DWJY0qwrfvze",
         "outputId": "6ef32554-0ccb-4c8c-c02c-48d53a3d81ac"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2736,7 +2735,7 @@
       "metadata": {
         "id": "MUSkcQ8Mf6bt"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2752,7 +2751,7 @@
         "id": "2hbsaMvdgGtJ",
         "outputId": "eda1ef27-4b06-4361-c8f3-980273e5e5db"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3144,7 +3143,7 @@
         "id": "g126G7xrg4Mo",
         "outputId": "853c248f-bc50-49dd-f55a-a9c41c5dd9e5"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3588,7 +3587,7 @@
         "id": "HdiXE9sLhwIy",
         "outputId": "b564131d-9a3c-4e70-dcd5-49e0b1ec737a"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3618,7 +3617,7 @@
         "id": "Ogjb0R44j2Rh",
         "outputId": "cf4e3bf0-d4e2-45eb-8c72-e412261b1cf7"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3646,7 +3645,7 @@
         "id": "WiSjzS8bkBQ_",
         "outputId": "6bb46e39-6a9c-438d-b733-b86325d2f19b"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3677,7 +3676,7 @@
         "id": "fClzaW0ykdEq",
         "outputId": "031deccc-50a6-45f8-ef50-bc02cdd63853"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4066,7 +4065,7 @@
         "id": "oBjMYNaskkZF",
         "outputId": "0a25b502-cd4e-43cc-9d88-a02d42c0dd4c"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4433,7 +4432,7 @@
         "id": "aYhsPCQLk4Ys",
         "outputId": "14235ccd-4e6c-4331-eac2-38258ad541e4"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4776,7 +4775,7 @@
         "id": "rmZj85FAl2QK",
         "outputId": "2fb67ec7-9494-425b-d419-b5096bfce5b5"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5112,7 +5111,7 @@
         "id": "oC82Jo1vmELJ",
         "outputId": "f2f9a366-c163-491b-b873-4d288406874c"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5455,7 +5454,7 @@
         "id": "cC0DkCTjmHyC",
         "outputId": "22ff29e1-671a-4427-abed-d28ebf53d24c"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5785,7 +5784,7 @@
         "id": "5ZFEPib6nRgv",
         "outputId": "71cda1c8-4410-4132-d6f6-8256570fb757"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6129,7 +6128,7 @@
         "id": "W_PBmDzgnVas",
         "outputId": "74afbafb-04c0-458a-da6f-ffa4f6ae911c"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6528,7 +6527,7 @@
         "id": "pPU1Z4JOI5RG",
         "outputId": "0dd9049f-f993-44db-a575-89c405306310"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6844,6 +6843,18 @@
           "execution_count": 106
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Standaryzacja - StandardScaler\n",
+        "\n",
+        "std() - pandas nieobciążony\n",
+        "std() - numpy obciążony"
+      ],
+      "metadata": {
+        "id": "PE2WyJA1QdK8"
+      }
     },
     {
       "cell_type": "code",
